:bug: form element alignment issues

--- a/src/_assets/scss/components/sections/_bofu-form.scss
+++ b/src/_assets/scss/components/sections/_bofu-form.scss
@@ -5,4 +5,18 @@
         @extend .py-3;
     }
 
+    form {
+        @extend .row;
+
+        .form-group {
+            @extend .col-12, .col-md-6;
+
+            width: 50%;
+        }
+
+        .text-center {
+            @extend .mx-auto;
+        }
+    }
+
 }
